--- a/src/assets/style/main.scss
+++ b/src/assets/style/main.scss
@@ -1,7 +1,6 @@
 @import "bulma/sass/utilities/initial-variables.sass";
 @import url("https://cdnjs.cloudflare.com/ajax/libs/octicons/3.5.0/octicons.min.css");
 
-
 h1 {
   font-size: $size-1;
 }
@@ -18,14 +17,20 @@ h4 {
   font-size: $size-4;
 }
 
-
 .avatar {
-    padding: 3px;
-    height: auto;
-    border: none;
-    box-shadow: none;
+  padding: 3px;
+  height: auto;
+  border: none;
+  box-shadow: none;
 }
 
 .github-octicon {
-    font: normal normal 40px octicons;
+  font: normal normal 40px octicons;
+}
+
+.github-profile,
+.github-profile:hover {
+  color: #495961;
+  font-weight: 600;
+  text-decoration: none;
 }
