--- a/src/assets/style/main.scss
+++ b/src/assets/style/main.scss
@@ -1,5 +1,8 @@
 @import "bulma/sass/utilities/initial-variables.sass";
 @import url("https://cdnjs.cloudflare.com/ajax/libs/octicons/3.5.0/octicons.min.css");
+@import url("https://fonts.googleapis.com/icon?family=Material+Icons");
+@import url("https://use.fontawesome.com/releases/v5.2.0/css/all.css");
+@import "bulma.scss";
 
 h1 {
   font-size: $size-1;
@@ -33,4 +36,24 @@ h4 {
   color: #495961;
   font-weight: 600;
   text-decoration: none;
+}
+
+.button{
+  
+  &.facebook {
+    background: #4267b2;
+    color: white;
+  }
+
+  &.telegram {
+    background: #269acd;
+    color: white;
+  }
+
+  &.github {
+    background: #313030;
+    color: white;
+  }
+
+
 }
